<resources>
    <string name="app_name">Revizor</string>
    <string name="hello">Привіт, я</string>
    <string name="rev">Ревізор</string>
    <string name="start">Розпочати</string>
    <string name="create_acc">Створити</string>
    <string name="email">Email</string>
    <string name="pass">Пароль</string>
    <string name="Register">Реєстрація</string>
    <string name="sign_in"> Увійти в</string>
    <string name="exit">   Вийти</string>
    <string name="HaveAcc">Have an account? Sign in</string>
    <string name="DontHaveACC">Немає аккаунта?</string>
    <string name="new_review">Нова рецензія</string>
    <string name="em">"@"</string>
    <string name="log">Логін</string>
    <string name="myAcc">Account info</string>
    <string name="recens">   Рецензії</string>
    <string name="drafts">   Чернетки</string>
    <string name="settings">   Налаштування</string>
    <string name="check_pass">Підтвердити пароль</string>
    <string name="go">Увійти</string>
    <string name="loading">завантажуємо...</string>
    <string name="caption">Назва</string>
    <string name="title">Рецензія</string>
    <string name="take_photo">Зробити фото</string>
    <string name="add_location">тиць щоб додати локацію</string>
    <string name="repeat_pass">"повторно введений пароль не співпадає"</string>
    <string name="place">Місце</string>
    <string name="ready_to_send">Відправити  </string>
    <string name="sending">Відправлення...  </string>
    <string name="sent">Відправлено  </string>
    <string name="manager_acc">Управління аккаунтом</string>
    <string name="exception_internet_connection">щось з интернетом</string>
    <string name="exception_socket_timeout">сервер не відповідає</string>
    <string name="exception_else">шось сталося</string>
    <string name="exception_check_password">повторно введений пароль не співпадає</string>
</resources>