<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvManagerAcc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/manager_acc"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCaption" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#37000000"
        app:layout_constraintEnd_toEndOf="@id/tvManagerAcc"
        app:layout_constraintStart_toStartOf="@id/tvManagerAcc"
        app:layout_constraintTop_toBottomOf="@id/tvManagerAcc" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="#D42488"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_baseline_exit_to_app_24"
        app:drawableTint="#D42488"
        app:layout_constraintStart_toStartOf="@id/tvManagerAcc"
        app:layout_constraintTop_toBottomOf="@id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>